--- a/style/style.css
+++ b/style/style.css
@@ -18,6 +18,7 @@
   flex-direction: column;
   align-items: center;
   gap: 25px;
+  margin-bottom: 30px;
 }
 
 .form-input p {
@@ -46,4 +47,14 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+}
+
+.password {
+  display: flex;
+  justify-content: center;
+}
+
+.password span {
+  font-size: 18px;
+  font-weight: 900;
 }
